# blockzero-ops

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: build-pool-miner.yml  build-xmrig.yml
installer/: block-zero.iss
pool/native/: CMakeLists.txt  bz_pool_miner.cpp  miner_config.cpp  miner_config.hpp  pow_util.cpp  pow_util.hpp  stratum_client.cpp  stratum_client.hpp
pool/python-miner/: requirements.txt
pool/scripts/: build-native.ps1  copy-openssl-runtime.ps1
runbooks/: mainnet-explorer.md  mainnet-mining-pool.md  mainnet-seed-node.md  pool-mining-quickstart.md  testnet-explorer.md
scripts/: explorer-branding.py  fix-currency-crash.py  mine-testnet-loop.sh  patch-currency.py  setup-testnet-portproxy.ps1  start-testnet-mining.sh
scripts/mainnet/: bitcoin.conf.example  build-windows-installer.ps1  chain-identity.ps1  deploy-bloz-brand.py  deploy-local-bin.ps1  deploy-pool-web.py  deploy-ws-bridge.py  fix-wallet-datadir.ps1  install-macos.sh  install-pool-windows.ps1  install-windows.ps1  install-xmrig.ps1  install-xmrig.sh  mine-mainnet.ps1  mine-pool-mainnet.ps1  mine-pool.bat  mine-pool.sh  mine-solo.sh  resync-mainnet.ps1
scripts/testnet/: bitcoin.conf.example  chain-identity.ps1  install-unix.sh  install-windows.ps1  mine-testnet.ps1  mine-testnet.sh  resync-testnet.ps1
systemd/: blockzero-explorer.env.example  blockzero-explorer.service  blockzero-mainnet-explorer.env.example  blockzero-mainnet-explorer.service  blockzero-mainnet.service  bzero-mainnet-seed.bitcoin.conf.example
xmrig-bz/: patch.py
(+2 files in other folders)
